--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "license": "UNLICENSED",
     "private": true,
     "dependencies": {
+        "@carbon/react": "^1.53.1",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
@@ -14,6 +15,8 @@
         "@types/react-dom": "^17.0.11",
         "core-js": "^3.23.0",
         "regenerator-runtime": "^0.13.9",
+        "sass": "^1.72.0",
+        "sass-loader": "^14.0.0",
         "ts-loader": "^9.0.0",
         "typescript": "^5.4.2",
         "webpack": "^5.74.0",
