--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
     "license": "UNLICENSED",
     "private": true,
     "dependencies": {
+        "@reduxjs/toolkit": "^2.2.2",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-redux": "^9.1.0"
     },
     "devDependencies": {
         "@babel/core": "^7.17.0",
